<resources>
    <string name="app_name">Party Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="marker">Marker</string>
    <string name="moving">Moving</string>
    <string name="location_settings">Location settings</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="check_in">Check-in</string>
    <string name="saveLocation">Save location</string>
    <string name="title_section1">My page</string>
    <string name="title_section2">My meetings</string>
    <string name="title_section3">My friends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main_activity2_party1">MainActivity2Party1Activity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_section4">Search</string>
    <string name="space_in_pwd">Enter password witout spaces</string>
    <string name="space_in_login">Enter login without spaces</string>
    <string name="date">Date:\n</string>
    <string name="nothing">Found nothing</string>
    <string name="enter_no_rus">Enter only latin letters and numerals</string>
    <string name="date_format">Wrong format of date</string>
    <string name="enter_data">You should enter data to continue</string>
    <string name="connection">Connection problem, check your network</string>
    <string name="registrated">You are registrated</string>
    <string name="params_wrong">Wrong params</string>
    <string name="find_patry">Find event</string>
    <string name="delete_photo">Delete photo</string>
    <string name="delete_choosen">Delete choosen</string>
    <string name="add_photo">Add photo</string>
    <string name="event_page">Event page</string>
    <string name="join">Join</string>
    <string name="event_inf">Information about event</string>
    <string name="event_name">Event name</string>
    <string name="address">Address:</string>
    <string name="participants">Participants</string>
    <string name="album">Album</string>
    <string name="my_friends">My friends</string>
    <string name="search">Search</string>
    <string name="save_changes">Save changes</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="enter_information">Enter information about you</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone">phone</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="registration">Registration</string>
    <string name="party_finder">PartyFinder</string>
    <string name="create_new">Create new event</string>
    <string name="enter_event">Enter event name</string>
    <string name="date_dd_mm">Дата: ДД-ММ-ГГГГ</string>
    <string name="enter_address">Введите адрес события</string>
    <string name="chose_place">Chose appropriate event place at the map</string>
    <string name="create">Create</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_last_name">Enter last name</string>
</resources>
