<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/id1"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="225dp"
        android:id="@+id/imageView3"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/bent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_information"
        android:id="@+id/textView"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edLog"
        android:hint="@string/login"
        android:layout_gravity="center_horizontal"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edPwd"
        android:layout_gravity="center_horizontal"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:ems="10"
        android:id="@+id/edFName"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edLName"
        android:hint="@string/last_name"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edPhone"
        android:layout_gravity="center_horizontal"
        android:hint="@string/phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edDate"
        android:hint="@string/dd_mm_yyyy"
        android:inputType="date" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/registration"
        android:id="@+id/btReg"
        android:layout_gravity="center_horizontal"
        android:onClick="ClickReg"
        android:background="@drawable/blue_button_background"
        android:textColor="#ffffffff"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tvOut"
        android:layout_marginTop="10dp" />

</LinearLayout>