<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/tvOut"
            android:gravity="center"
            android:textSize="20dp"
            android:text="@string/create_new" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edEvent"
            android:hint="@string/enter_event" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edDate"
            android:inputType="date"
            android:hint="@string/date_dd_mm" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edAddress"
            android:hint="@string/enter_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:text="@string/chose_place"
            android:id="@+id/textView5"
            android:singleLine="true" />

        <fragment
            android:layout_width="fill_parent"
            android:layout_height="260dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:id="@+id/eventMap"
            android:layout_gravity="center" />


        <Button
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:id="@+id/btCreate"
            android:background="@drawable/grey_btn_background"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/her"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>